--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
-    "next": "latest",
+    "next": "^15.2.8",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
     "use-debounce": "^10.0.4",
